--- a/DataMaster/WebContent/WEB-INF/web.xml
+++ b/DataMaster/WebContent/WEB-INF/web.xml
@@ -2,10 +2,22 @@
     xmlns="http://java.sun.com/xml/ns/j2ee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
- 
+   
+    <servlet>
+        <servlet-name>ajaxServlet</servlet-name>
+        <servlet-class>com.datamaster.servlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ajaxServlet</servlet-name>
+        <url-pattern>/status/ajax/*</url-pattern>
+    </servlet-mapping>
     <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+          <init-param>
+            <param-name>actionPackages</param-name>
+            <param-value>com.datamaster.action</param-value>
+        </init-param>
     </filter>
  
     <filter-mapping>
