chnages for MSPUrl Extractor Partial

--- a/DataMaster/src/com/datamaster/resources/DBConfig.properties
+++ b/DataMaster/src/com/datamaster/resources/DBConfig.properties
@@ -1,3 +1,3 @@
-DB_SERVER=jdbc:mysql://localhost:3306/aapcompare
+DB_SERVER=jdbc:mysql://localhost:3306/aapcorjr_dbaapcompare9
 DB_USERNAME=root
 DB_PASSWORD=
